# HdriToCubemap

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
gradle/: libs.versions.toml
src/main/cpp/: CMakeLists.txt  Main.cpp  converter.cpp
src/main/java/dev/trindadedev/hdritocubemap/: HdrToCubemap.kt  Main.kt
src/main/java/org/robok/hdritocubemap/: HdrToCubemap.kt  HdriToCubemap.kt
